--- a/output/team.html
+++ b/output/team.html
@@ -14,7 +14,7 @@
     
     <style type="text/css">
         body {
-            font-family: font-family: 'Saira Semi Condensed', sans-serif;
+            font-family: 'Saira Semi Condensed', sans-serif;
             font-size: 16px;
             line-height: 24px;
             color: #333;
