changes to HTML still no joy.  Must have something in the wrong place

--- a/output/team.html
+++ b/output/team.html
@@ -14,7 +14,7 @@
     
     <style type="text/css">
         body {
-            font-family: 'Saira Semi Condensed', sans-serif;
+            font-family: font-family: 'Saira Semi Condensed', sans-serif;
             font-size: 16px;
             line-height: 24px;
             color: #333;
@@ -134,34 +134,6 @@
             <li class="list-group-item">ID: {{ id }}</li>
             <li class="list-group-item">Email: <a href="mailto:{{ email }}">{{ email }}</a></li>
             <li class="list-group-item">School: {{ school }}</li>
-        </ul>
-    </div>
-</div>
-
-<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">{{ name }}</h2>
-        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>{{ role }}</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: {{ id }}</li>
-            <li class="list-group-item">Email: <a href="mailto:{{ email }}">{{ email }}</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/{{ github }}" target="_blank" rel="noopener noreferrer">{{ github }}</a></li>
-        </ul>
-    </div>
-</div>
-
-<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">{{ name }}</h2>
-        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>{{ role }}</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: {{ id }}</li>
-            <li class="list-group-item">Email: <a href="mailto:{{ email }}">{{ email }}</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/{{ github }}" target="_blank" rel="noopener noreferrer">{{ github }}</a></li>
         </ul>
     </div>
 </div>
