--- a/output/team.html
+++ b/output/team.html
@@ -17,6 +17,9 @@
             font-family: 'Saira Semi Condensed', sans-serif;
             font-size: 16px;
             line-height: 24px;
+            margin-top: 5rem;
+            margin-left: 5rem;
+            margin-right: 5rem;
             color: #333;
             background-color: #efefef;
             letter-spacing: .15em;
