--- a/output/team.html
+++ b/output/team.html
@@ -84,14 +84,42 @@
                     
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">{ name }</h2>
-        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>{ role }</h3>
+        <h2 class="card-title">${ manager.name }</h2>
+        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>${ manager.getRole }</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: { id }</li>
-            <li class="list-group-item">Email: <a href="mailto:{{ email }}">{ email }</a></li>
-            <li class="list-group-item">Office number: { officeNumber }</li>
+            <li class="list-group-item">ID: ${ manager.id }</li>
+            <li class="list-group-item">Email: <a href="mailto:{{ email }}">${ manager.email }</a></li>
+            <li class="list-group-item">Office number: ${ manager.officeNumber }</li>
+        </ul>
+    </div>
+</div>
+
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">${ engineer.name }</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>${ engineer.getRole }</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: ${ engineer.id }</li>
+            <li class="list-group-item">Email: <a href="mailto:{{ email }}">${ engineer.email }</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/{{ github }}" target="_blank" rel="noopener noreferrer">${ engineer.github }</a></li>
+        </ul>
+    </div>
+</div>
+
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">${ intern.name }</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>${ role }</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: ${ id }</li>
+            <li class="list-group-item">Email: <a href="mailto:${ email }">${ email }</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/${ github }" target="_blank" rel="noopener noreferrer">${ github }</a></li>
         </ul>
     </div>
 </div>
@@ -99,11 +127,25 @@
 <div class="card employee-card">
     <div class="card-header">
         <h2 class="card-title">{ name }</h2>
-        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>{ role }</h3>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>${ role }</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: { id }</li>
+            <li class="list-group-item">Email: <a href="mailto:${ email }">${ email }</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/${ github }" target="_blank" rel="noopener noreferrer">${ github }</a></li>
+        </ul>
+    </div>
+</div>
+
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">${ name }</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>${ role }</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: ${ engineer.id }</li>
             <li class="list-group-item">Email: <a href="mailto:{{ email }}">{ email }</a></li>
             <li class="list-group-item">GitHub: <a href="https://github.com/{{ github }}" target="_blank" rel="noopener noreferrer">{ github }</a></li>
         </ul>
@@ -112,56 +154,14 @@
 
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">{ name }</h2>
-        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>{ role }</h3>
+        <h2 class="card-title">${ inter.name }</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>${ intern.getRole }</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: { id }</li>
-            <li class="list-group-item">Email: <a href="mailto:{{ email }}">{ email }</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/{{ github }}" target="_blank" rel="noopener noreferrer">{ github }</a></li>
-        </ul>
-    </div>
-</div>
-
-<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">{ name }</h2>
-        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>{ role }</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: { id }</li>
-            <li class="list-group-item">Email: <a href="mailto:{{ email }}">{ email }</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/{{ github }}" target="_blank" rel="noopener noreferrer">{ github }</a></li>
-        </ul>
-    </div>
-</div>
-
-<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">{ name }</h2>
-        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>{ role }</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: { id }</li>
-            <li class="list-group-item">Email: <a href="mailto:{{ email }}">{ email }</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/{{ github }}" target="_blank" rel="noopener noreferrer">{ github }</a></li>
-        </ul>
-    </div>
-</div>
-
-<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">{ name }</h2>
-        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>{ role }</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: { id }</li>
-            <li class="list-group-item">Email: <a href="mailto:{{ email }}">{ email }</a></li>
-            <li class="list-group-item">School: { school }</li>
+            <li class="list-group-item">ID: ${ id }</li>
+            <li class="list-group-item">Email: <a href="mailto:${ email }">${ intern.email }</a></li>
+            <li class="list-group-item">School: ${ school }</li>
         </ul>
     </div>
 </div>
