Final Working Document

--- a/output/team.html
+++ b/output/team.html
@@ -84,77 +84,66 @@
                     
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Ben Cook</h2>
-        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>getRole() {
-    return "Manager"
-  }</h3>
+        <h2 class="card-title">Kevin Cook</h2>
+        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: BC6656</li>
-            <li class="list-group-item">Email: <a href="mailto:bcook@mymail.com">bcook@mymail.com</a></li>
-            <li class="list-group-item">Office number: 3323</li>
+            <li class="list-group-item">ID: KC009</li>
+            <li class="list-group-item">Email: <a href="mailto:KC009@">KC009@</a></li>
+            <li class="list-group-item">Office number: 009</li>
         </ul>
     </div>
 </div>
 
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Kevin Cook</h2>
-        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>getRole() {
-    return "Engineer"
-  }</h3>
+        <h2 class="card-title">Ben Cook</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: KC5454</li>
-            <li class="list-group-item">Email: <a href="mailto:{{ email }}">kcook@mymail.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/kcook121" target="_blank" rel="noopener noreferrer">kcook121</a></li>
+            <li class="list-group-item">ID: BC008</li>
+            <li class="list-group-item">Email: <a href="mailto:{{ email }}">bcook@mymail.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/bc008" target="_blank" rel="noopener noreferrer">bc008</a></li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Daniel Cook </h2>
-        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>getRole() {
-    return "Engineer"
-  }</h3>
+        <h2 class="card-title">Jason Cook</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: DC3321</li>
-            <li class="list-group-item">Email: <a href="mailto:{{ email }}">dcook@mymail.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/dcook3323" target="_blank" rel="noopener noreferrer">dcook3323</a></li>
-        </ul>
-    </div>
-</div>
-<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">Jason Cook </h2>
-        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>getRole() {
-    return "Engineer"
-  }</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: JC1011</li>
+            <li class="list-group-item">ID: JC0070</li>
             <li class="list-group-item">Email: <a href="mailto:{{ email }}">jcook@mymail.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/kcook75757" target="_blank" rel="noopener noreferrer">kcook75757</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/jcook0070" target="_blank" rel="noopener noreferrer">jcook0070</a></li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
         <h2 class="card-title">Sarah Cook</h2>
-        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>getRole() {
-    return "Intern"
-      
-  }</h3>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: scook3334</li>
-            <li class="list-group-item">Email: <a href="mailto:scook@utsa.edu">scook@utsa.edu</a></li>
+            <li class="list-group-item">ID: SC00600</li>
+            <li class="list-group-item">Email: <a href="mailto:{{ email }}">scook@mymail.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/scook00600" target="_blank" rel="noopener noreferrer">scook00600</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Greg Cook</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i> Intern </h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: GC00110</li>
+            <li class="list-group-item">Email: <a href="mailto:gcook@mymail.com">gcook@mymail.com</a></li>
             <li class="list-group-item">School: UTSA</li>
         </ul>
     </div>
